--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,6 +6,8 @@ name: 'my_new_project'
 version: '1.0.0'
 config-version: 2
 
+vars:
+ BCHID: "{{ env_var('DBT_CLOUD_RUN_ID',123) }}"
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
